css/index.css
/*CSS RESET*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/*GENERAL STYLES*/
html {
  font-size: 62.5%;
}
body {
  font-size: 1.6rem;
  line-height: 1.5;
  font-family: "Raleway", sans-serif;
}
h1,
p,
.name,
.bio {
  font-family: "Raleway", sans-serif;
  text-align: center;
  margin: 4%;
}
h1 {
  font-size: 6rem;
  margin: 0;
}
a {
  text-decoration: none;
  color: black;
  font-size: 2.5rem;
}
a:hover {
  font-weight: bold;
}
.name {
  font-size: 150%;
  font-weight: 200;
}
img {
  height: 39rem;
  object-fit: cover;
  display: block;
  margin: 2%;
  margin-top: 4%;
  margin-left: auto;
  margin-right: auto;
  border-radius: 2%;
}
img:hover {
  opacity: 80%;
}

/*HEADER STYLES */
header {
  display: flex;
  justify-content: center;
}
nav {
  width: 30%;
  display: flex;
  justify-content: space-evenly;
  margin-top: 5%;
}
nav a {
  color: #626262;
}
nav span {
  border-left: 3px solid #626262;
}
/*Title Section Styles*/
.title-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.title-container div {
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg");
  background-position: center;
  color: white;
  width: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 60vh;
  margin: 5% 0;
}
.title-container div:hover {
  opacity: 80%;
}
.title-container hr {
  width: 80%;
}
button {
  padding: 1% 3%;
  font-size: 1.6rem;
  border-radius: 6px;
  border: 2px solid #626262;
  box-shadow: 2px 2px 1px #626262;
  transition: 2s;
}
button:hover {
  background-color: #626262;
  border: 2px solid white;
  color: white;
  box-shadow: 2px 2px 1px white;
}
/*Artists Section Styles */
.artists-container {
  display: flex;
  justify-content: space-around;
  width: 80%;
  margin: 0 auto;
}

.artist {
  width: 40%;
  text-align: center;
}
.artist img {
  width: 100%;
}

@media (max-width: 500px) {
  header nav a {
    font-size: 1.5rem;
    margin: 0 5%;
  }
  nav span {
    border-left: 0.1rem solid #626262;
  }
  .home {
    font-weight: bolder;
  }

  .title-container div {
    width: 100%;
  }

  .title-container hr {
    margin: 0;
    width: 100%;
  }

  .artists-container {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
  }

  .artist {
    width: 80%;
    margin-bottom: 5%;
    font-size: 1rem;
  }

  .artists-container div a {
    font-size: 2rem;
    font-weight: lighter;
  }

  .artist img {
    width: 80%;
    height: 50%;
  }
}

